tests/parser/errors/match.ray
match value {
    "value" print "oui"
}

match value
    "value" => print "oui"
}

match value {
    "value" => { print "oui" } "otherValue" => "error"
}

match value is {
    int print "oui"
}

match value is {
    int print "oui"
}

match value {
    else => 1
    0 => "other"
}

match value {
    0 => "other"
    else => 1
    else => 1
}

match value is {
    1 => ""
}

match value is {
    int {
        0 => 0
